<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.europeana.statistics.backend</groupId>
    <artifactId>statistics-dashboard-backend</artifactId>
    <version>6-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>statistics-dashboard-common</module>
        <module>statistics-dashboard-service</module>
        <module>statistics-dashboard-rest</module>
        <module>statistics-dashboard-worker</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.maven.compiler.plugin>3.8.0</version.maven.compiler.plugin>
        <version.maven.release.plugin>2.5.3</version.maven.release.plugin>
        <version.surefire.plugin>3.1.2</version.surefire.plugin>
        <version.metis>12-SNAPSHOT</version.metis>
        <version.log4j>2.23.0</version.log4j>
        <version.slf4j>2.0.12</version.slf4j>
        <version.elastic.apm>1.48.1</version.elastic.apm>
        <version.spring.boot>3.2.3</version.spring.boot>
        <version.spring>6.1.4</version.spring>
        <version.swagger>3.0.0</version.swagger>
        <version.swagger.annotations>1.6.2</version.swagger.annotations>
        <version.jackson>2.16.1</version.jackson>
        <version.commons.lang3>3.12.0</version.commons.lang3>
        <version.servlet.api>4.0.1</version.servlet.api>
        <version.jakarta.annotation>2.1.1</version.jakarta.annotation>
        <version.jakarta.xml.bind-api>4.0.1</version.jakarta.xml.bind-api>
        <version.jaxb.runtime>4.0.4</version.jaxb.runtime>
        <version.junit>5.10.2</version.junit>
        <version.mockito>5.8.0</version.mockito>
        <version.jetbrains>24.0.1</version.jetbrains>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.spring.boot}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${version.spring}</version>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Github connection -->
    <scm>
        <connection>scm:git:https://github.com/europeana/statistics-dashboard-backend</connection>
        <url>https://github.com/europeana/statistics-dashboard-backend</url>
        <tag>HEAD</tag>
        <developerConnection>scm:git:https://github.com/europeana/statistics-dashboard-backend</developerConnection>
    </scm>

    <repositories>
        <repository>
            <id>libs-release</id>
            <name>libs-release</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>libs-snapshot</id>
            <name>libs-snapshot</name>
            <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${version.maven.release.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.maven.compiler.plugin}</version>
                    <configuration>
                        <release>21</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <!--Temporary argument to bypass exception on inline mockito mocks(coming from transitive bytebuddy dependency).-->
                            <!--Remove this when mockito has been updated to work with java 21(At time of writing 5.8.0 does not work).-->
                            <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
